--- a/snippets/cssclasses/family-tree.css
+++ b/snippets/cssclasses/family-tree.css
@@ -12,14 +12,21 @@ body {
   --family-tree-connectors-color: var(--background-secondary);
 }
 
+.callout[data-callout=family-tree] {
+  --callout-icon: lucide-network;
+}
+
+.callout[data-callout=family-tree] > .callout-content > ul,
 .family-tree .el-ul > ul {
   --list-spacing: 0;
   --list-indent: 0;
   overflow-x: scroll;
 }
+.callout[data-callout=family-tree] > .callout-content > ul .list-bullet,
 .family-tree .el-ul > ul .list-bullet {
   display: none;
 }
+.callout[data-callout=family-tree] > .callout-content > ul .list-collapse-indicator,
 .family-tree .el-ul > ul .list-collapse-indicator {
   position: absolute;
   opacity: 1;
@@ -36,28 +43,34 @@ body {
   border: 1px solid var(--color-accent);
   z-index: 1;
 }
+.callout[data-callout=family-tree] > .callout-content > ul .list-collapse-indicator.is-collapsed,
 .family-tree .el-ul > ul .list-collapse-indicator.is-collapsed {
   background: var(--color-accent);
 }
+.callout[data-callout=family-tree] > .callout-content > ul .list-collapse-indicator:hover,
 .family-tree .el-ul > ul .list-collapse-indicator:hover {
   background: color-mix(in srgb, var(--color-accent), var(--workleaves-background) 70%);
 }
+.callout[data-callout=family-tree] > .callout-content > ul .list-collapse-indicator.is-collapsed:hover,
 .family-tree .el-ul > ul .list-collapse-indicator.is-collapsed:hover {
   background: color-mix(in srgb, var(--color-accent), var(--workleaves-background) 30%);
 }
+.callout[data-callout=family-tree] > .callout-content > ul .list-collapse-indicator svg,
 .family-tree .el-ul > ul .list-collapse-indicator svg {
   display: none;
 }
+.callout[data-callout=family-tree] > .callout-content > ul li.is-collapsed,
 .family-tree .el-ul > ul li.is-collapsed {
   text-wrap: nowrap;
 }
+.callout[data-callout=family-tree] > .callout-content > ul li.is-collapsed > ul > *,
 .family-tree .el-ul > ul li.is-collapsed > ul > * {
   display: none;
 }
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) {
+.callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed), .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) {
   display: none;
 }
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child {
+.callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child, .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child {
   display: none;
   position: absolute;
   left: 50%;
@@ -71,20 +84,20 @@ body {
   z-index: var(--layer-tooltip);
   top: 0;
 }
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::before {
+.callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::before, .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::before {
   content: "Wed to ";
   display: unset;
   position: unset;
   color: #727272;
 }
-.family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet {
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet, .family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet {
   display: inline-block;
   float: none;
   margin-inline-start: 0;
   margin-inline-end: 0.1em;
   transform: translateY(-0.2em);
 }
-.family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet::after {
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet::after, .family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)) > .list-bullet::after {
   content: "💍";
   position: static;
   margin: 0;
@@ -94,32 +107,43 @@ body {
   background: none;
   box-shadow: none;
 }
-.family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)):has(> .list-bullet:hover) > ul > li:first-child {
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed)):has(> .list-bullet:hover) > ul > li:first-child, .family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed)):has(> .list-bullet:hover) > ul > li:first-child {
   display: block;
 }
+.callout[data-callout=family-tree] > .callout-content > ul li:not(:has(ul)),
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child),
 .family-tree .el-ul > ul li:not(:has(ul)),
 .family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child) {
   text-wrap: nowrap;
 }
+.callout[data-callout=family-tree] > .callout-content > ul li:not(:has(ul)) .list-collapse-indicator,
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child) .list-collapse-indicator,
 .family-tree .el-ul > ul li:not(:has(ul)) .list-collapse-indicator,
 .family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child) .list-collapse-indicator {
   display: none;
 }
+.callout[data-callout=family-tree] > .callout-content > ul ul:not(:has(ul))::before,
+.callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before,
 .family-tree .el-ul > ul ul:not(:has(ul))::before,
 .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before {
   height: 30px;
 }
+.callout[data-callout=family-tree] > .callout-content > ul li:not(:has(ul))::after,
+.callout[data-callout=family-tree] > .callout-content > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child)::after,
 .family-tree .el-ul > ul li:not(:has(ul))::after,
 .family-tree .el-ul > ul li:has(> :is(.tag[href="#wed"], .wed) + ul > li:only-child)::after {
   height: 20px;
 }
-.family-tree .el-ul > ul, .family-tree .el-ul > ul ul {
+.callout[data-callout=family-tree] > .callout-content > ul,
+.callout[data-callout=family-tree] > .callout-content > ul ul,
+.family-tree .el-ul > ul,
+.family-tree .el-ul > ul ul {
   display: flex;
   padding-top: 10px;
   margin-top: 0px;
   position: relative;
-  background-color: var(--workleaves-background);
 }
+.callout[data-callout=family-tree] > .callout-content > ul li,
 .family-tree .el-ul > ul li {
   float: left;
   text-align: center;
@@ -127,7 +151,10 @@ body {
   position: relative;
   padding: 20px 5px 0 5px;
   margin-inline: auto;
+  flex-grow: 1;
 }
+.callout[data-callout=family-tree] > .callout-content > ul li::before,
+.callout[data-callout=family-tree] > .callout-content > ul li::after,
 .family-tree .el-ul > ul li::before,
 .family-tree .el-ul > ul li::after {
   content: "";
@@ -138,24 +165,29 @@ body {
   width: 50%;
   height: 10px;
 }
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::after {
+.callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::after, .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:first-child::after {
   content: none;
 }
+.callout[data-callout=family-tree] > .callout-content > ul li::after,
 .family-tree .el-ul > ul li::after {
   right: auto;
   left: 50%;
   border-left: 1px solid var(--family-tree-connectors-color);
 }
+.callout[data-callout=family-tree] > .callout-content > ul li:only-child::after,
+.callout[data-callout=family-tree] > .callout-content > ul li:only-child::before,
 .family-tree .el-ul > ul li:only-child::after,
 .family-tree .el-ul > ul li:only-child::before {
   display: none;
 }
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2)::before, .family-tree .el-ul > ul li:first-child::before, .family-tree .el-ul > ul li:last-child::after {
+.callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2)::before, .callout[data-callout=family-tree] > .callout-content > ul li:first-child::before, .callout[data-callout=family-tree] > .callout-content > ul li:last-child::after, .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2)::before, .family-tree .el-ul > ul li:first-child::before, .family-tree .el-ul > ul li:last-child::after {
   border-top: none;
 }
+.callout[data-callout=family-tree] > .callout-content > ul li:only-child,
 .family-tree .el-ul > ul li:only-child {
   padding-top: 0;
 }
+.callout[data-callout=family-tree] > .callout-content > ul ul::before,
 .family-tree .el-ul > ul ul::before {
   content: "";
   position: absolute;
@@ -168,18 +200,21 @@ body {
   bottom: unset;
   border-inline-end: unset;
 }
-.family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:nth-child(3))::before {
+.callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:nth-child(3))::before, .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:nth-child(3))::before {
   height: 10px;
 }
+.callout[data-callout=family-tree] > .callout-content > ul ul:not(:has(> li))::before,
+.callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before,
 .family-tree .el-ul > ul ul:not(:has(> li))::before,
 .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul:has(> li:only-child)::before {
   content: none;
 }
-.family-tree .el-ul > ul ul:not(:is(.tag[href="#wed"], .wed) + ul) > li:only-child::after, .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after {
+.callout[data-callout=family-tree] > .callout-content > ul ul:not(:is(.tag[href="#wed"], .wed) + ul) > li:only-child::after, .callout[data-callout=family-tree] > .callout-content > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after, .family-tree .el-ul > ul ul:not(:is(.tag[href="#wed"], .wed) + ul) > li:only-child::after, .family-tree .el-ul > ul :is(.tag[href="#wed"], .wed) + ul > li:nth-child(2):last-child::after {
   content: none;
 }
 
 @media print {
+  .callout[data-callout=family-tree] ul,
   .family-tree ul {
     --family-tree-connectors-color: var(--text-normal);
   }
