--- a/snippets/editor/headings/h-stroke.css
+++ b/snippets/editor/headings/h-stroke.css
@@ -17,152 +17,194 @@ body {
   --h6-border-color-collapsed: var(--collapse-icon-color-collapsed);
 }
 
-.markdown-preview-view.h1-stroke h1 {
+.markdown-preview-view:is(.h1-stroke, .h1-stroke-left-aligned) h1 {
   --h1-weight: var(--font-extralight);
-  --h1-size: 2em;
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.markdown-preview-view.h1-stroke h1::before {
+.markdown-preview-view:is(.h1-stroke, .h1-stroke-left-aligned) h1::before {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h1-border-color);
   height: 1px;
 }
-.markdown-preview-view.h1-stroke h1::after {
+.markdown-preview-view:is(.h1-stroke, .h1-stroke-left-aligned) h1::after {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h1-border-color);
   height: 1px;
 }
-.markdown-preview-view.h1-stroke h1:is(.is-collapsed > h1)::before, .markdown-preview-view.h1-stroke h1:is(.is-collapsed > h1)::after {
+.markdown-preview-view:is(.h1-stroke, .h1-stroke-left-aligned) h1:is(.is-collapsed > h1)::before, .markdown-preview-view:is(.h1-stroke, .h1-stroke-left-aligned) h1:is(.is-collapsed > h1)::after {
   background-color: var(--h1-border-color-collapsed);
 }
 
-.markdown-preview-view.h2-stroke h2 {
+.markdown-preview-view.h1-stroke-left-aligned h1 {
+  align-items: left;
+}
+.markdown-preview-view.h1-stroke-left-aligned h1::before {
+  flex-grow: 0;
+  flex-basis: 10px;
+}
+
+.markdown-preview-view:is(.h2-stroke, .h2-stroke-left-aligned) h2 {
   --h2-weight: var(--font-extralight);
-  --h2-size: 1.8em;
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.markdown-preview-view.h2-stroke h2::before {
+.markdown-preview-view:is(.h2-stroke, .h2-stroke-left-aligned) h2::before {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h2-border-color);
   height: 1px;
 }
-.markdown-preview-view.h2-stroke h2::after {
+.markdown-preview-view:is(.h2-stroke, .h2-stroke-left-aligned) h2::after {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h2-border-color);
   height: 1px;
 }
-.markdown-preview-view.h2-stroke h2:is(.is-collapsed > h2)::before, .markdown-preview-view.h2-stroke h2:is(.is-collapsed > h2)::after {
+.markdown-preview-view:is(.h2-stroke, .h2-stroke-left-aligned) h2:is(.is-collapsed > h2)::before, .markdown-preview-view:is(.h2-stroke, .h2-stroke-left-aligned) h2:is(.is-collapsed > h2)::after {
   background-color: var(--h2-border-color-collapsed);
 }
 
-.markdown-preview-view.h3-stroke h3 {
+.markdown-preview-view.h2-stroke-left-aligned h2 {
+  align-items: left;
+}
+.markdown-preview-view.h2-stroke-left-aligned h2::before {
+  flex-grow: 0;
+  flex-basis: 10px;
+}
+
+.markdown-preview-view:is(.h3-stroke, .h3-stroke-left-aligned) h3 {
   --h3-weight: var(--font-extralight);
-  --h3-size: 1.6em;
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.markdown-preview-view.h3-stroke h3::before {
+.markdown-preview-view:is(.h3-stroke, .h3-stroke-left-aligned) h3::before {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h3-border-color);
   height: 1px;
 }
-.markdown-preview-view.h3-stroke h3::after {
+.markdown-preview-view:is(.h3-stroke, .h3-stroke-left-aligned) h3::after {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h3-border-color);
   height: 1px;
 }
-.markdown-preview-view.h3-stroke h3:is(.is-collapsed > h3)::before, .markdown-preview-view.h3-stroke h3:is(.is-collapsed > h3)::after {
+.markdown-preview-view:is(.h3-stroke, .h3-stroke-left-aligned) h3:is(.is-collapsed > h3)::before, .markdown-preview-view:is(.h3-stroke, .h3-stroke-left-aligned) h3:is(.is-collapsed > h3)::after {
   background-color: var(--h3-border-color-collapsed);
 }
 
-.markdown-preview-view.h4-stroke h4 {
+.markdown-preview-view.h3-stroke-left-aligned h3 {
+  align-items: left;
+}
+.markdown-preview-view.h3-stroke-left-aligned h3::before {
+  flex-grow: 0;
+  flex-basis: 10px;
+}
+
+.markdown-preview-view:is(.h4-stroke, .h4-stroke-left-aligned) h4 {
   --h4-weight: var(--font-extralight);
-  --h4-size: 1.4em;
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.markdown-preview-view.h4-stroke h4::before {
+.markdown-preview-view:is(.h4-stroke, .h4-stroke-left-aligned) h4::before {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h4-border-color);
   height: 1px;
 }
-.markdown-preview-view.h4-stroke h4::after {
+.markdown-preview-view:is(.h4-stroke, .h4-stroke-left-aligned) h4::after {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h4-border-color);
   height: 1px;
 }
-.markdown-preview-view.h4-stroke h4:is(.is-collapsed > h4)::before, .markdown-preview-view.h4-stroke h4:is(.is-collapsed > h4)::after {
+.markdown-preview-view:is(.h4-stroke, .h4-stroke-left-aligned) h4:is(.is-collapsed > h4)::before, .markdown-preview-view:is(.h4-stroke, .h4-stroke-left-aligned) h4:is(.is-collapsed > h4)::after {
   background-color: var(--h4-border-color-collapsed);
 }
 
-.markdown-preview-view.h5-stroke h5 {
+.markdown-preview-view.h4-stroke-left-aligned h4 {
+  align-items: left;
+}
+.markdown-preview-view.h4-stroke-left-aligned h4::before {
+  flex-grow: 0;
+  flex-basis: 10px;
+}
+
+.markdown-preview-view:is(.h5-stroke, .h5-stroke-left-aligned) h5 {
   --h5-weight: var(--font-extralight);
-  --h5-size: 1.2em;
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.markdown-preview-view.h5-stroke h5::before {
+.markdown-preview-view:is(.h5-stroke, .h5-stroke-left-aligned) h5::before {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h5-border-color);
   height: 1px;
 }
-.markdown-preview-view.h5-stroke h5::after {
+.markdown-preview-view:is(.h5-stroke, .h5-stroke-left-aligned) h5::after {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h5-border-color);
   height: 1px;
 }
-.markdown-preview-view.h5-stroke h5:is(.is-collapsed > h5)::before, .markdown-preview-view.h5-stroke h5:is(.is-collapsed > h5)::after {
+.markdown-preview-view:is(.h5-stroke, .h5-stroke-left-aligned) h5:is(.is-collapsed > h5)::before, .markdown-preview-view:is(.h5-stroke, .h5-stroke-left-aligned) h5:is(.is-collapsed > h5)::after {
   background-color: var(--h5-border-color-collapsed);
 }
 
-.markdown-preview-view.h6-stroke h6 {
+.markdown-preview-view.h5-stroke-left-aligned h5 {
+  align-items: left;
+}
+.markdown-preview-view.h5-stroke-left-aligned h5::before {
+  flex-grow: 0;
+  flex-basis: 10px;
+}
+
+.markdown-preview-view:is(.h6-stroke, .h6-stroke-left-aligned) h6 {
   --h6-weight: var(--font-extralight);
-  --h6-size: 1em;
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.markdown-preview-view.h6-stroke h6::before {
+.markdown-preview-view:is(.h6-stroke, .h6-stroke-left-aligned) h6::before {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h6-border-color);
   height: 1px;
 }
-.markdown-preview-view.h6-stroke h6::after {
+.markdown-preview-view:is(.h6-stroke, .h6-stroke-left-aligned) h6::after {
   content: "";
   display: block;
   flex-grow: 1;
   background-color: var(--h6-border-color);
   height: 1px;
 }
-.markdown-preview-view.h6-stroke h6:is(.is-collapsed > h6)::before, .markdown-preview-view.h6-stroke h6:is(.is-collapsed > h6)::after {
+.markdown-preview-view:is(.h6-stroke, .h6-stroke-left-aligned) h6:is(.is-collapsed > h6)::before, .markdown-preview-view:is(.h6-stroke, .h6-stroke-left-aligned) h6:is(.is-collapsed > h6)::after {
   background-color: var(--h6-border-color-collapsed);
+}
+
+.markdown-preview-view.h6-stroke-left-aligned h6 {
+  align-items: left;
+}
+.markdown-preview-view.h6-stroke-left-aligned h6::before {
+  flex-grow: 0;
+  flex-basis: 10px;
 }
