--- a/scss/window/_titlebar.scss
+++ b/scss/window/_titlebar.scss
@@ -5,7 +5,9 @@ body {
     --titlebar-background-focused: none;
 }
 
-.mod-windows.is-hidden-frameless:not(.is-fullscreen) .workspace:not(.is-right-sidedock-open) > .mod-root::before {
+.mod-windows.is-hidden-frameless:not(.is-fullscreen, .is-mobile)
+    .workspace:not(.is-right-sidedock-open)
+    > .mod-root::before {
     content: "";
     position: absolute;
     top: 0;
